--- a/settings.json
+++ b/settings.json
@@ -1,7 +1,7 @@
 {
   "eMailEnd": "gmail.com",
-  "email": "tiktokhesap32",
+  "email": "",
   "geckoPath": "C:\\Users\\ramoi\\Desktop\\geckodriver.exe",
-  "gmailPass": "TikTokTikTok",
+  "gmailPass": "",
   "password": "AndromedaBot123"
 }
